<?xml version="1.0"?>
<package format="2">
  <name>tf_service</name>
  <version>0.1.0</version>
  <description>The tf_service package</description>

  <author email="grupp@magazino.eu">Michael Grupp</author>
  <maintainer email="grupp@magazino.eu">Michael Grupp</maintainer>
  <url type="website">https://magazino.eu</url>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: use this instead of submodule
             ...once the Ubuntu package is less broken:
             https://bugs.launchpad.net/ubuntu/+source/pybind11/+bug/1779578 -->
  <!-- <build_depend>pybind11-dev</build_depend> -->

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>rospy</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
