<?xml version="1.0"?>
<package format="2">
  <name>tf_service</name>
  <version>0.8.0</version>
  <description>The tf_service package</description>

  <author email="grupp@magazino.eu">Michael Grupp</author>
  <maintainer email="grupp@magazino.eu">Michael Grupp</maintainer>
  <maintainer email="magnago@magazino.eu">Valerio Magnago</maintainer>
  <url type="website">https://magazino.eu</url>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>rospy</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosnode</test_depend>

  <export>
  </export>
</package>
